--- a/custom-init.org
+++ b/custom-init.org
@@ -163,7 +163,7 @@ Emacs + Vim = Evil
     (package-install 'evil))
   ;; Enable Evil
   (require 'evil)
-  (evil-mode 0)
+  (evil-mode 1)
 #+end_src
 
 Custom escape for evil. Reference: https://www.emacswiki.org/emacs/Evil#h5o-16
@@ -815,14 +815,14 @@ Major mode for editing YAML files.
 
 Basic key chords are below. Mode-specific key chords are defined in each mode.
 
-The basic rule of naming key chords is acronyms. For directions, use VIM keys.
+Use acronyms for naming key chords, or leave a comment otherwise. For directions, use VIM keys.
 
 #+begin_src emacs-lisp
   ;; buffer
   (key-chord-define-global "bl"     'switch-to-buffer)  ; short for buffer list.
   (key-chord-define-global "bs"     'save-buffer)
   ;; file
-  (key-chord-define-global "fi"     'find-file)
+  (key-chord-define-global "fb"     'find-file)  ; short for find buffer.
   (key-chord-define-global "kb"     'kill-buffer)
   ;; window
   (key-chord-define-global "ow"     'other-window)
@@ -835,8 +835,8 @@ The basic rule of naming key chords is acronyms. For directions, use VIM keys.
   (key-chord-define-global "gl"     'forward-char)
   (key-chord-define-global "gp"     'goto-last-change)
   ;; scrolling
-  (key-chord-define-global "if"     'isearch-forward)
-  (key-chord-define-global "ib"     'isearch-backward)
+  (key-chord-define-global "if"     'isearch-forward-regexp)
+  (key-chord-define-global "ib"     'isearch-backward-regexp)
   ;; search
   (key-chord-define-global "sj"     'evil-scroll-page-down)  ; scroll + VIM key.
   (key-chord-define-global "sk"     'evil-scroll-page-up)
